--- a/PostGis.DAL/PostGis.DAL.csproj
+++ b/PostGis.DAL/PostGis.DAL.csproj
@@ -92,6 +92,7 @@
     <Compile Include="Providers\SessionFactoryParameters.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
