--- a/PostGis.DAL/App.config
+++ b/PostGis.DAL/App.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <connectionStrings>
-    <add name="MyDbContext" connectionString="Server=127.0.0.1;Port=5432;Database=gisdb;User Id=postgres;Password=password;"
+    <add name="MyDbContext" connectionString="Server=127.0.0.1;Port=5432;Database=demodb;User Id=postgres;Password=password;"
           providerName="Npgsql" />
   </connectionStrings>
   <system.data>
