--- a/PostGis.DAL/App.config
+++ b/PostGis.DAL/App.config
@@ -1,13 +1,12 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0"?>
 <configuration>
   <connectionStrings>
-    <add name="MyDbContext" connectionString="Server=127.0.0.1;Port=5432;Database=demodb;User Id=postgres;Password=password;"
-          providerName="Npgsql" />
+    <add name="MyDbContext" connectionString="Server=127.0.0.1;Port=5432;Database=demodb;User Id=postgres;Password=password;" providerName="Npgsql"/>
   </connectionStrings>
   <system.data>
     <DbProviderFactories>
       <remove invariant="Npgsql"></remove>
-      <add name="Npgsql Data Provider" invariant="Npgsql" description=".Net Framework Data Provider for Postgresql Server" type="Npgsql.NpgsqlFactory, Npgsql" />
+      <add name="Npgsql Data Provider" invariant="Npgsql" description=".Net Framework Data Provider for Postgresql Server" type="Npgsql.NpgsqlFactory, Npgsql"/>
     </DbProviderFactories>
   </system.data>
-</configuration>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/></startup></configuration>
