--- a/PostGis.Model/PostGis.Model.csproj
+++ b/PostGis.Model/PostGis.Model.csproj
@@ -9,8 +9,9 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>PostGis.Model</RootNamespace>
     <AssemblyName>PostGis.Model</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -39,45 +40,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Acls.cs" />
+    <Compile Include="Acls.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Include="Changesets.cs" />
     <Compile Include="ChangesetTags.cs" />
-    <Compile Include="ClientApplications.cs" />
-    <Compile Include="ConstString.cs" />
-    <Compile Include="Countries.cs" />
-    <Compile Include="CurrentNodes.cs" />
-    <Compile Include="CurrentNodeTags.cs" />
-    <Compile Include="CurrentRelationMembers.cs" />
-    <Compile Include="CurrentRelations.cs" />
-    <Compile Include="CurrentRelationTags.cs" />
-    <Compile Include="CurrentWayNodes.cs" />
-    <Compile Include="CurrentWays.cs" />
-    <Compile Include="CurrentWayTags.cs" />
-    <Compile Include="DiaryEntries.cs" />
-    <Compile Include="Friends.cs" />
-    <Compile Include="GpsPoints.cs" />
-    <Compile Include="GpxFiles.cs" />
-    <Compile Include="GpxFileTags.cs" />
-    <Compile Include="Languages.cs" />
-    <Compile Include="Messages.cs" />
-    <Compile Include="Nodes.cs" />
-    <Compile Include="NodeTags.cs" />
-    <Compile Include="OauthNonces.cs" />
-    <Compile Include="OauthTokens.cs" />
+    <Compile Include="ITable.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RelationMembers.cs" />
-    <Compile Include="Relations.cs" />
-    <Compile Include="RelationTags.cs" />
-    <Compile Include="SchemaMigrations.cs" />
-    <Compile Include="Sessions.cs" />
-    <Compile Include="UserBlocks.cs" />
-    <Compile Include="UserPreferences.cs" />
-    <Compile Include="UserRoles.cs" />
     <Compile Include="Users.cs" />
-    <Compile Include="UserTokens.cs" />
-    <Compile Include="WayNodes.cs" />
-    <Compile Include="Ways.cs" />
-    <Compile Include="WayTags.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
