--- a/PostGis/Web.config
+++ b/PostGis/Web.config
@@ -9,7 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=4.4.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-PostGis-20131121112525;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-PostGis-20131121112525.mdf" providerName="System.Data.SqlClient" />
+    <add name="MyDbContext" connectionString="Server=127.0.0.1;Port=5432;Database=demodb;User Id=postgres;Password=password;" providerName="Npgsql"/>
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
