--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -2,6 +2,7 @@
 <repositories>
   <repository path="..\PostGis.BLL\packages.config" />
   <repository path="..\PostGis.DAL\packages.config" />
+  <repository path="..\PostGis.Model\packages.config" />
   <repository path="..\PostGis.Tests\packages.config" />
   <repository path="..\PostGis\packages.config" />
 </repositories>
