--- a/PostGis.DAL/packages.config
+++ b/PostGis.DAL/packages.config
@@ -1,8 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="EntityFramework" version="6.0.1" targetFramework="net45" />
+  <package id="EntityFramework" version="6.0.2" targetFramework="net40" />
+  <package id="EntityFramework.v5.PostgreSql" version="1.1" targetFramework="net45" />
   <package id="Iesi.Collections" version="3.2.0.4000" targetFramework="net45" />
   <package id="NHibernate" version="3.3.3.4001" targetFramework="net45" />
-  <package id="Npgsql" version="2.0.12.1" targetFramework="net45" />
+  <package id="Npgsql" version="2.0.14.2" targetFramework="net40" />
   <package id="System.Spatial" version="5.6.0" targetFramework="net45" />
 </packages>
